--- a/container.config.json
+++ b/container.config.json
@@ -6,7 +6,11 @@
 	"mem": 0.5,                                     // 容器规格-内存大小
 	"policyType": "cpu",                            // 扩缩容条件：CPU使用率
 	"policyThreshold": 60,                          // 扩缩容条件：使用率超过60%触发
-	"envParams": {},                                // 环境变量。可以有多个。
+	"envParams": {
+	  "MYSQL_ADDRESS": "10.0.224.13:3306",
+	  "MYSQL_USERNAME": "root",
+	  "MYSQL_PASSWORD": "zNR6$A)n"
+	},                                // 环境变量。可以有多个。
 	"customLogs": "stdout",                         // 日志采集路径，只有此路径下的日志会显示在微信云托管控制台“日志”界面中
 	"dataBaseName":"wxcomponent",                   // 创建的数据库表的名称
 	"executeSQLs":[
